# con_tregex

./: .coveragerc  .gitignore  Makefile  README.md  buggy.log_  mypy.ini  pyproject.toml  setup.py
src/con_tregex/: __init__.py  about.py  abstract_collins_head_finder.py  collins_head_finder.py  main.py  relation.py  tree.py  tregex.py
src/pytregex/: __init__.py  __main__.py  _path.py  abstract_collins_head_finder.py  collins_head_finder.py  condition.py  exceptions.py  glossary.py  head_finder.py  main.py  node_descriptions.py  relation-class.py  relation.py  tree.py  tregex.py  utils.py
src/pytregex/international/pennchinese/: chinese_head_finder.py
tests/: __init__.py  base_tmpl.py  test_node_descriptions.py  test_tree.py  test_tregex.py
