[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytregex"
authors = [{name = "Long Tan", email = "tanloong@foxmail.com"}]
description = "Tregex written in Python"
dependencies = []
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/tanloong/pytregex"

[project.scripts]
pytregex = "pytregex.main:main"

[tool.setuptools.dynamic]
version = {attr = "pytregex.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

# Ruff complete options: https://docs.astral.sh/ruff/settings/#extend
[tool.ruff]
line-length = 112
extend-exclude = [
  "src/pytregex/ply",
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "I", # isort
]
ignore = [
  "E501", # Line too long
  # "B011",
  # "UP038", # 'isinstance(x, int | float)' causes slower code
  # "B007", # Loop control variable `i` not used within loop body
]
[tool.ruff.lint.per-file-ignores]
"src/pytregex/tregex.py" = [
  "F841", # Local variable assigned to but never used
]
"tests/test_tregex.py" = [
  "F841", # Local variable assigned to but never used
]

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
reportIncompatibleMethodOverride = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
reportUnusedFunction = false
